# ashare_f10_scrapper

./: .coverage  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  WINDOWS_START_HERE.md  bootstrap-diagnostic.json  bootstrap-structural-candidates.json  devflow-workflow-validation.json  docker-compose.yml  post-merge-state-result.json  pyproject.toml  w04-state-result.json
.agent/: current_task.yaml
.bootstrap/: part_001.txt  part_002b_00.txt  part_002b_01.txt  part_002b_02.txt  part_002c_00.txt  part_002c_01.txt  part_002c_02.txt  part_003.txt  part_003c_00.txt  part_003c_01.txt  part_003c_02.txt  part_003c_04.txt  part_003c_05.txt  part_004.txt  part_005b_00.txt  part_005b_01.txt  part_005b_02.txt  part_006.txt  patch_00.txt  patch_01.txt  patch_02.txt  patch_03.txt  patch_04.txt  patch_05.txt  patch_06.txt  patch_07.txt
.devflow/: bark-all-status-live-test-activation.json  codex-entrypoints.yaml  codex-policy.yaml  legacy-codex-rerun-quarantine.json  notification-channels.yaml
.devflow-staging/: w04.part00  w04.part01  w04.part02  w04.part03  w04.part04  w04.part05  w04.part06  w04.tar.gz.b64
.full-cross-validation-bootstrap/: part_00.txt  part_01.txt  part_02.txt  part_03.txt  part_04.txt  part_05.txt  part_06.txt  part_07.txt  part_08.txt  part_09.txt  part_10.txt  part_11.txt  part_12.txt  part_13.txt  part_14.txt  part_15.txt  part_16.txt  part_17.txt  part_18.txt  part_19.txt  part_20.txt  part_21.txt  part_22.txt  part_23.txt  part_24.txt
.github/: AGENTS.md  cninfo-probe-trigger.txt  (+6 more)
docs/: VISUAL_FIRST.md  (+10 more)
(+729 files in other folders)
