[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-f10-scrapper"
version = "0.1.0"
description = "A-share F10 data collector, research database, TTM engine, formula lab and web UI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "tyxq428"}]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "requests>=2.32,<3",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "typer>=0.15,<1",
  "rich>=13.9,<15",
  "duckdb>=1.2,<2",
  "pandas>=2.2,<3",
  "pyarrow>=19,<22",
  "openpyxl>=3.1,<4",
  "rapidfuzz>=3.10,<4",
  "python-multipart>=0.0.20,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
  "httpx>=0.28,<1",
]

[project.scripts]
ashare-f10 = "ashare_f10.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ashare_f10 = ["resources/*.json.gz.b64", "resources/*.json", "web/*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/ashare_f10/api/jobs.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
